Switch mirror to MRAN

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,8 @@ package:
 source:
   fn: reshape2_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/reshape2_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/reshape2/reshape2_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/reshape2_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/reshape2/reshape2_{{ version }}.tar.gz
   sha256: 8aff94c935e75032344b52407593392ddd4e16a88bb206984340c816d42c710e
 
 
